--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,16 @@
 
+html{
+  background: url('../assets/images/editedmic1.jpg') no-repeat fixed center;
+  // height: 100%;
+// no-repeat center center fixed;;
 
+}
+
+h1{
+  font-family: 'Bungee Shade', cursive;
+  font-size: 150px;
+  color: white
+}
 
 .map {
   height: 260px;
