added secure routes. Can't get user profile page to work

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,13 +11,13 @@
 
 }
 
-h1{
+.title{
   font-family: 'Bungee Shade', cursive;
-  font-size: 150px;
+  font-size: 200px;
   color: white
 }
 
-p,h2,h3{
+p,h2,h3,h1{
   color: white;
 }
 .map {
