--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,8 +6,16 @@
   -o-background-size: cover;
   background-size: cover;
 
+
   // height: 100%;
 // no-repeat center center fixed;;
+
+}
+
+.nav.navbar {
+  background-color: transparent;
+  // font-family: 'Roboto', sans-serif;
+  // color: white;
 
 }
 
