solved problem of the user show page. Also part fixed the problem with the unicode characters appearing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -179,3 +179,8 @@ p,h2,h3,{
   margin-top: 5px;
   margin-left: 145px;
 }
+
+.textarea#text.textarea {
+  border: black solid 2px;
+  border-radius: 20px;
+}
